---------------------------------------------------------------------------------------------------
Version: 0.3.0
Date: 2021-07-06
  Features:
    - Useful equipment compatibility
---------------------------------------------------------------------------------------------------
Version: 0.2.8
Date: 2021-07-05
  Features:
    - German locale, thanks to Yokmp
---------------------------------------------------------------------------------------------------
Version: 0.2.7
Date: 2021-07-04
  Features:
    - Rocket silo construction, One more tier compatibility
---------------------------------------------------------------------------------------------------
Version: 0.2.6
Date: 2021-07-01
  Features:
    - Strange matter compatibility
---------------------------------------------------------------------------------------------------
Version: 0.2.5
Date: 2021-06-29
  Features:
    - Realistic Fusion Power compatibility
---------------------------------------------------------------------------------------------------
Version: 0.2.4
Date: 2021-06-26
  Changes:
    - Flamethrower weapon recipe
  Features:
    - More compat incl. omega drill 2, plutonium energy
---------------------------------------------------------------------------------------------------
Version: 0.2.3
Date: 2021-06-17
  Features:
    - More compat incl. bob's machines, mining, etc
---------------------------------------------------------------------------------------------------
Version: 0.2.2
Date: 2021-06-16
  Features:
    - Polish locale, thanks to TheoMarque
    - Ja locale update, thanks to Sakuro
---------------------------------------------------------------------------------------------------
Version: 0.2.1
Date: 2021-06-16
  Changes:
    - Tweak to electric-furnace recipe
---------------------------------------------------------------------------------------------------
Version: 0.2.0
Date: 2021-06-16
  Features:
    - Recipe bypass setting
  Changes: