@@ -3,10 +3,12 @@ local util = {}
 util.name = "bztungsten"
 util.tungsten_ore = "tungsten-ore"
 util.tungsten_plate = "tungsten-plate"
+util.tungsten_carbide_recipe = "tungsten-carbide"
 
 util.tungsten_processing = "tungsten-processing"
-if bobmods and bobmods.lib and bobmods.lib.recipe and bobmods.lib.tech then
+if mods.bobplates then
   util.tungsten_processing = "bz-tungsten-processing"
+  util.tungsten_carbide_recipe = "bz-tungsten-carbide"
 end
 
 function util.fe_plus(sub)
