@@ -28,7 +28,7 @@ advanced-carbon-furnace=For making tungsten carbide quickly and efficiently. Bur
 
 [technology-name]
 tungsten-processing=Tungsten processing
-bz-tungsten-processing=Tungsten processing
+bz-tungsten-processing=Basic tungsten processing
 enriched-tungsten=Enriched tungsten
 tungsten-matter-processing=Tungsten conversion
 advanced-carbon-furnace=__ITEM__advanced-carbon-furnace__
